# WAS_Extras

./: BLVaeEncode.py  README.md  VividSharpenV2.py  WAS_ConditioningBlend.py  WAS_VAEEncodeForInpaint.py  WAS_VividSharpen.py  __init__.py  ksampler_sequence.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
modules/cli/: lora_spec.py  merge_loras_z.py
nodes/: BLVaeEncode.py  ConditioningBlend.py  DebugThis.py  TiledUpscaleModel.py  VAEEncodeForInpaint.py  VividSharpen.py  WASEdgeSafeLatentUpscale.py  WASHybridLatentUpscale.py  WASLUT.py  WASPowerLoraMerger.py  ksampler_sequence.py  pyproject.toml
nodes/cond/: ConditioningBlend.py
nodes/image/: CameraMotionTrajectorySimple.py  VividSharpen.py  WASWanExposureStabilizer.py
nodes/latent/: VAEEncodeForInpaint.py  WASHybridLatentUpscale.py  WASLatentContrastLimitedDetailBoost.py
nodes/lora/: WASLoraReweight.py  WASPowerLoraMerger.py
nodes/sampling/: WanMoESampler.py
web/: was_power_lora_merger.js
workflows/: Wan2.2_I2V_Continuation_Scenes__Non-MoE_mode.json  Wan2.2_I2V_Non-MoE_mode.json  Wan2.2_T2V_MoE_mode__Scenes.json  Wan2.2_T2V_Non-MoE_mode__Scenes.json
