[project]
name = "was_extras"
description = "Nodes:Conditioning (Blend), Inpainting VAE Encode (WAS), VividSharpen. Experimental nodes, or other random extra helper nodes."
version = "1.0.2"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/WASasquatch/WAS_Extras"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "was"
DisplayName = "WAS_Extras"
Icon = ""
